works fine with java 8 and java 17